force-app/main/default/objects/Call_Transcript__c/Call_Transcript__c.object-meta.xml
<CustomObject>
    <label>Call Transcript</label>
    <nameField>
        <displayFormat>TRN-{00000}</displayFormat>
        <label>Call Transcript Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Transcripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>