force-app/main/default/objects/Call_Transcript__c/fields/Customer_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Customer_Inquiry__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer Inquiry</label>
    <referenceTo>Customer_Inquiry__c</referenceTo>
    <relationshipLabel>Call Transcripts</relationshipLabel>
    <relationshipName>Call_Transcripts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>