force-app/main/default/objects/Call_Transcript__c/fields/Related_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Call Transcripts</relationshipLabel>
    <relationshipName>Call_Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>