force-app/main/default/objects/Call_Transcript__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>AI-generated or manual summary</description>
    <label>Summary</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>