force-app/main/default/objects/Call_Transcript__c/fields/Transcript_Text__c.field-meta.xml
<CustomField>
    <fullName>Transcript_Text__c</fullName>
    <label>Transcript Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>